# Nvidia-megatron-bridge-API

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bandit_results.json  coverage.json  docker-compose.yml  project_deps_check.txt  pyproject.toml
.github/workflows/: merge.yml  pr.yml
app/: config.py  database.py  main.py
app/api/: checkpoints.py  health.py  jobs.py  peft.py  router.py  system.py  training.py  ws.py
app/schemas/: checkpoint.py  common.py  config_container.py  training.py
app/security/: auth.py  rate_limit.py  token_filter.py
app/services/: checkpoint_service.py  gpu_service.py  job_service.py  log_service.py  training_service.py
app/utils/: paths.py
app/worker/: dispatcher.py  executor.py  launcher.py
docker/: Dockerfile  Dockerfile.worker
docs/: decision-log.md  deployment.md
megatronbridge_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
migrations/: 001_initial.sql
notebooks/: colab_quickstart.ipynb
tests/: conftest.py
tests/unit/phase1/: test_config.py  test_database.py  test_health.py  test_main.py  test_paths.py
tests/unit/phase2/: test_dispatcher.py  test_jobs_router.py  test_launcher.py  test_state_machine.py
tests/unit/phase3/: conftest.py  test_checkpoint_service.py  test_checkpoints_router.py  test_executor.py
tests/unit/phase4/: test_config_container.py  test_peft_router.py  test_training_router.py  test_training_service.py
tests/unit/phase5/: test_gpu_service.py  test_system_router.py
tests/unit/phase6/: test_log_streamer.py  test_streaming_router.py
tests/unit/phase7/: test_auth_and_rate_limit.py  test_log_service.py
tests/unit/security/: test_token_filter.py
